// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/WalletPage/actions/closeDepositModal should loadTransactionsSuccess should create closeDepositModal action 1`] = `
Object {
  "type": "atomicapp/WalletPage/DEPOSIT_MODAL_CLOSE",
}
`;

exports[`containers/WalletPage/actions/closeJoyride should closeJoyride should create closeJoyride action 1`] = `
Object {
  "type": "atomicapp/WalletPage/JOYRIDE_CLOSE",
}
`;

exports[`containers/WalletPage/actions/closeWithdrawModal should loadTransactionsSuccess should create closeWithdrawModal action 1`] = `
Object {
  "type": "atomicapp/WalletPage/WITHDRAW_MODAL_CLOSE",
}
`;

exports[`containers/WalletPage/actions/loadCoinTransactions should loadCoinTransactions should create loadCoinTransactions action 1`] = `
Object {
  "payload": Object {
    "coin": "KMD",
    "queueId": 23,
    "result": "success",
    "status": "queued",
  },
  "type": "atomicapp/WalletPage/COIN_TRANSACTIONS_LOAD",
}
`;

exports[`containers/WalletPage/actions/loadTransactions should loadTransactions should create loadTransactions action 1`] = `
Object {
  "type": "atomicapp/WalletPage/TRANSACTIONS_LOAD",
}
`;

exports[`containers/WalletPage/actions/loadTransactionsSuccess should loadTransactionsSuccess should create loadTransactionsSuccess action 1`] = `
Object {
  "type": "atomicapp/WalletPage/LOAD_TRANSACTIONS_SUCCESS",
}
`;

exports[`containers/WalletPage/actions/loadWithdraw should loadWithdraw should create loadWithdraw action 1`] = `
Object {
  "payload": Object {
    "address": "RRVJBpA5MoeTo3beA1iP6euWWrWcJdJtXu",
    "amount": 0.1,
    "coin": "BEER",
  },
  "type": "atomicapp/WalletPage/WITHDRAW_LOAD",
}
`;

exports[`containers/WalletPage/actions/loadWithdrawError should loadWithdrawError should create loadWithdrawError action 1`] = `
Object {
  "error": Object {
    "context": Object {
      "action": "atomicapp/WalletPage/WITHDRAW_LOAD",
      "params": Object {
        "address": "RRVJBpA5MoeTo3beA1iP6euWWrWcJdJtXu",
        "amount": 0.1,
        "coin": "BEER",
      },
    },
    "message": "can't connect to electrum server",
    "type": "RPC",
  },
  "type": "atomicapp/WalletPage/WITHDRAW_LOAD_ERROR",
}
`;

exports[`containers/WalletPage/actions/loadWithdrawSuccess should loadWithdrawSuccess should create loadWithdrawSuccess action 1`] = `
Object {
  "payload": Object {
    "address": "RRVJBpA5MoeTo3beA1iP6euWWrWcJdJtXu",
    "amount": 0.1,
    "coin": "BEER",
  },
  "type": "atomicapp/WalletPage/WITHDRAW_LOAD_SUCCESS",
}
`;

exports[`containers/WalletPage/actions/openDepositModal should loadTransactionsSuccess should create openDepositModal action 1`] = `
Object {
  "payload": Object {
    "coin": "KMD",
  },
  "type": "atomicapp/WalletPage/DEPOSIT_MODAL_OPEN",
}
`;

exports[`containers/WalletPage/actions/openJoyride should openJoyride should create openJoyride action 1`] = `
Object {
  "type": "atomicapp/WalletPage/JOYRIDE_OPEN",
}
`;

exports[`containers/WalletPage/actions/openWithdrawModal should loadTransactionsSuccess should create openWithdrawModal action 1`] = `
Object {
  "payload": Object {
    "coin": "KMD",
  },
  "type": "atomicapp/WalletPage/WITHDRAW_MODAL_OPEN",
}
`;
